# tit-logging

./: .gitignore  CMakeLists.txt  README.md  main.cpp
src/base/: CMakeLists.txt  Thread.cpp  Thread.h  atomic.h  atomic_int.h  current_thread.cpp  current_thread.h  mutex.h  platform_thread.cpp  platform_thread.h  process.cpp  simple_thread.cpp  simple_thread.h  thread.cpp  thread.h  timestamp.cpp
src/log/: CMakeLists.txt  log_destination.cpp  log_stream.cpp  log_stream.h  logger.cpp  logging.cpp  logging.h
src/logging/: CMakeLists.txt  Logging.cpp  Logging.h  logging.cpp  logging.h
